--- a/settings_finetune.yaml
+++ b/settings_finetune.yaml
@@ -1,12 +1,12 @@
-path_to_model: "111_1.h5"
-path_to_tokenizer: "111_1.p"
+path_to_model: "18_100.h5"
+path_to_tokenizer: "5_100.p"
 model_prefix: "Piano_AI_GRU_3_TIMES"
 frame_per_seconds: 5
-path_to_dataset: "../dataset2/maestro-v3.0.0/**/*.midi"
+path_to_dataset: "../dataset/maestro-v3.0.0/**/*.midi"
 path_to_save_result_to: "./results/"
 path_to_save_models_to: "./models/"
-number_of_songs_to_train_on: 1
+number_of_songs_to_train_on: 100
 seq_len: 20
-epochs: 20
-batch_song: 1
+epochs: 3
+batch_song: 16
 batch_sequences: 96
