Added downloading dataset

--- a/settings_finetune.yaml
+++ b/settings_finetune.yaml
@@ -2,7 +2,7 @@ path_to_model: "18_100.h5"
 path_to_tokenizer: "5_100.p"
 model_prefix: "Piano_AI_GRU_3_TIMES"
 frame_per_seconds: 5
-path_to_dataset: "../dataset/maestro-v3.0.0/**/*.midi"
+path_to_dataset: "./dataset/maestro-v3.0.0-midi/maestro-v3.0.0/**/*.midi"
 path_to_save_result_to: "./results/"
 path_to_save_models_to: "./models/"
 number_of_songs_to_train_on: 100
