--- a/settings_eval.yaml
+++ b/settings_eval.yaml
@@ -1,5 +1,5 @@
-path_to_model: "111_1.h5"
-path_to_tokenizer: "111_1.p"
-model_prefix: "Piano_AI_GRU_3_TIMES"
+path_to_model: "100_50.h5"
+path_to_tokenizer: "50_50.p"
+model_prefix: "Piano_AI_GRU_3_TIMES_smaller"
 frame_per_seconds: 5
 song_length: 400
