Minor changes - refactoring

--- a/settings_finetune.yaml
+++ b/settings_finetune.yaml
@@ -1,12 +1,15 @@
 path_to_model: "100_50.h5"
-path_to_tokenizer: "100_50.p"
+path_to_tokenizer: "50_50.p"
 model_prefix: "Piano_AI_GRU_3_TIMES_smaller"
 frame_per_seconds: 5
 path_to_dataset: "./dataset/maestro-v3.0.0-midi/maestro-v3.0.0/**/*.midi"
 path_to_save_result_to: "./results/"
 path_to_save_models_to: "./models/"
-number_of_songs_to_train_on: 100
+number_of_songs_to_train_on: 50
 seq_len: 20
-epochs: 3
+epochs: 40
 batch_song: 16
 batch_sequences: 96
+lr: 0.001
+optimizer: "Nadam"
+loss_function: "sparse_categorical_crossentropy"
